fix build-time warnings (#1273)
* constructor related warnings,
few outstanding usages of instance access to static methods,
ignored some missing javadoc warnings,
fixed some javadoc errors

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>